-
Bug
-
Resolution: Done
-
P2: Important
-
5.8, 5.9
-
None
-
dd385741605df2dd0cd977ebd8cd49cbf5d90271
The Blackview BV6000 uses the Mali-T860 GPU. When the FBO is read only a black image is delivered. Blacklisting the GPU (like its predecessors T720 and T760) solves this problem.
- is duplicated by
-
QTBUG-59303 In few android devices grabToImage take a black image
-
- Closed
-
- relates to
-
QTBUG-53083 [Android]Â QQuickWindow::grabWindow() will return a black image
-
- Closed
-
| For Gerrit Dashboard: QTBUG-59283 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 187465,2 | Add Mali-T860 to the BGRA blacklist | 5.8 | qt/qtbase | Status: ABANDONED | -1 | 0 |
| 188831,6 | Switch to RGB(A|X)8888[_Premultiplied] for QOpenGLFBO readbacks on GLES | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |